Refactoring: remove methods 'findAll' from service and DAO classes, replace searching by condition from AbstractDao to Storage class